<resources>
    <string name="app_name">FIC+</string>
    <!--login-->
    <string name="LogoLo">Logo</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="Login">Iniciar sesión</string>
    <string name="Register">Registrarse</string>
    <string name="Reset">¿Olvido su contraseña?</string>
    <string name="Switch">Mostrar contraseña</string>
    <string name="Description">¿Aún no tienes cuenta? Regístrate ahora</string>
    <string name="title">Bienvenido a FIC+</string>
    <string name="Facebook">Imagen facebook</string>
    <string name="Google">imagen google</string>
    <!--registro-->
    <string name="title2">Registrate</string>
    <string name="Description2">¿Ya tiene cuenta? Inicie sesión ahora</string>
    <string name="Name">Nombre</string>
    <string name="Name2">Apellido</string>
    <string name="RepContra">Repetir contraseña</string>
    <string name="LogoReg">LogoReg</string>
    <!--menu-->
    <string name="button_list">Mi lista</string>
    <string name="button_info">Información</string>
    <string name="button_play">Reproducir</string>
    <string name="title1">Series</string>
    <string name="title4">Películas</string>
    <string name="title3">Categorías</string>
    <string name="categorie1">De Misterio</string>
    <string name="edtAccion">Accion</string>
    <string name="edtTerror">Terror</string>
    <string name="edtAnimacion">Animacion</string>
    <string name="edtSuspenso">Suspenso</string>
    <string name="edtDrama">Drama</string>
    <string name="edtComedia">Comedia</string>
    <string name="edtMisterio">Misterio</string>
    <string name="edtInfantiles">Infantiles</string>
    <string name="edtAnime">Anime</string>
    <string name="Web">Pagina web</string>


</resources>